<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/itemEvent_startTimeSection"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemEventStartTime"/>

        <TextView
                android:id="@+id/itemEvent_startTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/itemEvent_endTimeSection"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEvent_startTimeSection"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemEventEndTime"/>

        <TextView
                android:id="@+id/itemEvent_endTimeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEvent_endTimeSection"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemEventName"/>

        <TextView
                android:id="@+id/itemEvent_nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>