<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/itemMove_fromPlaceSection"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemMoveFromPlace"/>

        <TextView
                android:id="@+id/itemMove_fromPlaceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/itemMove_toPlaceSection"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemMove_fromPlaceSection"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemMoveToPlace"/>

        <TextView
                android:id="@+id/itemMove_toPlaceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemMove_toPlaceSection"

            android:layout_margin="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/itemMoveEstimatedTime"/>

        <TextView
                android:id="@+id/itemMove_estimatedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>